--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,7 +60,7 @@ h2 ul {
 	border-radius: 6px;
 	box-shadow: 2px 2px 3px 0px #000;
 	vertical-align: top;
-	margin: 0 10px 0 0;
+	margin: 0 10px 0 7px;
 	padding: 5px 5px 20px 10px;
 }
 
