--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,15 +153,12 @@ footer {
 	color: #fff;
 	font-size: 0.9rem;
 	text-align: center;
-	margin-left: 111px;
+	padding-right: 65px;
 }
 
 footer span {
 	display: inline-block;
-	margin-top: 10px;
-	margin-right: 136px;
-	margin-left: -38px;
-	margin-bottom: 10px;
+	margin: 10px 49px;
 }
 
 footer .left {
@@ -175,10 +172,10 @@ footer .right {
 /*
  * For cell phones
  */
-@media only screen and (max-width: 440px) {
+@media only screen and (max-width: 480px) {
 	
 	#container {
-		width: 440px;
+		width: 100%;
 		background-image: url("img/hikers.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -239,7 +236,8 @@ footer .right {
 		color: #fff;
 		font-size: 0.9rem;
 		text-align: left;
-		margin-left: 71px;
+		padding-right: 0;
+		margin: 0;
 	}
 
 }
