--- a/public/8675309_NBWS/assets/css/one.style.css
+++ b/public/8675309_NBWS/assets/css/one.style.css
@@ -791,3 +791,26 @@ document.querySelector('.menu-container img').src = '../assets/img/brave_logo_bi
   padding-left: 0;
   padding-right: 0;
 }
+
+
+
+/* mobile menu styles 1/118/2016 */
+#tiny-menu div.menu-container {
+  display: none;
+}
+@media (max-width: 600px) {
+  #intro {
+    margin-top: 82px;
+  }
+  .one-page-header {
+    background: rgba(90, 90, 90, 1) !important;
+  }
+}
+@media (max-width: 400px) {
+  #tiny-menu div.menu-container {
+    display: block;
+  }
+  #fullsize-menu div.menu-container {
+    display: none;
+  }
+}
