--- a/public/8675309_NBWS/assets/css/one.style.css
+++ b/public/8675309_NBWS/assets/css/one.style.css
@@ -121,6 +121,14 @@ document.querySelector('.menu-container img').src = '../assets/img/brave_logo_bi
     padding-left: 100;
   }
 }
+@media (max-width: 600px) {
+  body {
+    margin-top: 82px;
+  }
+  .one-page-header {
+    background: rgba(90, 90, 90, 1) !important;
+  }
+}
 
 /*Navbar Toggle*/
 .one-page-header .navbar-toggle {
@@ -793,24 +801,3 @@ document.querySelector('.menu-container img').src = '../assets/img/brave_logo_bi
 }
 
 
-
-/* mobile menu styles 1/118/2016 */
-#tiny-menu div.menu-container {
-  display: none;
-}
-@media (max-width: 600px) {
-  #intro {
-    margin-top: 82px;
-  }
-  .one-page-header {
-    background: rgba(90, 90, 90, 1) !important;
-  }
-}
-@media (max-width: 400px) {
-  #tiny-menu div.menu-container {
-    display: block;
-  }
-  #fullsize-menu div.menu-container {
-    display: none;
-  }
-}
