--- a/public/assets/css/plugins.css
+++ b/public/assets/css/plugins.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: Unify - Responsive Bootstrap Template
  * Description: Business, Corporate, Portfolio, E-commerce, Blog and One Page Template.
  * Version: 1.8
@@ -20,7 +20,7 @@
 @media (max-width: 450px) {
    .da-slide p {
       display:none;
-   }   
+   }
 }
 
 @media (max-width: 900px) {
@@ -42,7 +42,7 @@
 
 .ms-promo-info-in {
   font-size: 60px;
-  font-weight: 600;  
+  font-weight: 600;
 }
 
 .ms-promo-sub {
@@ -89,7 +89,7 @@
 
 .tp-banner-container a.re-btn-brd:hover {
   color: #555;
-  background: #fff; 
+  background: #fff;
 }
 
 /*Fullwidth*/
@@ -118,7 +118,7 @@
   content: ' ';
   position: absolute;
   background: rgba(0,0,0,0.3);
-} 
+}
 
 .revolution-ch1 {
   color: #fff;
@@ -144,7 +144,7 @@
   left: 50%;
   width: 70px;
   height: 2px;
-  content: ' '; 
+  content: ' ';
   bottom: -20px;
   background: #fff;
   margin-left: -35px;
@@ -228,7 +228,7 @@
   font-weight: 200;
   line-height: 32px;
   padding: 10px 10px;
-    margin-left: 0px
+  margin-left: 0px;
   text-align: left;
 }
 
@@ -296,10 +296,10 @@
 .clients {
   border: 0;
   overflow: hidden;
-  margin-top: 10px;      
-  margin-bottom: 30px;  
+  margin-top: 10px;
+  margin-bottom: 30px;
   box-shadow:none !important;
-  margin-bottom: 0 !important;    
+  margin-bottom: 0 !important;
 }
 .clients li {
   overflow: hidden;
@@ -316,7 +316,7 @@
   display: none;
   position: absolute;
 }
-.clients li:hover img.color-img { 
+.clients li:hover img.color-img {
   display: block;
 }
 .clients li img {
@@ -385,12 +385,12 @@
 }
 
 .counters span.counter-icon i:after {
-   width: 0; 
+   width: 0;
    height: 0;
    left: 38%;
-   content: " "; 
+   content: " ";
    bottom: -7px;
-   display: block; 
+   display: block;
    position: absolute;
    border-top: 7px solid #72c02c;
    border-left: 7px solid transparent;
@@ -674,12 +674,12 @@
 .testimonials-v3 .owl-buttons .owl-next {
   padding: 13px;
   position: relative;
-  margin: 15px 2px 0; 
+  margin: 15px 2px 0;
     background: #f5f5f5;
-  display: inline-block;  
+  display: inline-block;
 }
 
-.testimonials-v3 .owl-buttons .owl-prev:after, 
+.testimonials-v3 .owl-buttons .owl-prev:after,
 .testimonials-v3 .owl-buttons .owl-next:after {
     top: 0;
     color: #bbb;
@@ -700,7 +700,7 @@
   content: "\f105";
 }
 
-.testimonials-v3 .owl-buttons .owl-prev:hover:after, 
+.testimonials-v3 .owl-buttons .owl-prev:hover:after,
 .testimonials-v3 .owl-buttons .owl-next:hover:after {
   color: #fff;
 }
@@ -711,7 +711,7 @@
   -webkit-transition: background 0.4s ease-in-out;
   -moz-transition: background 0.4s ease-in-out;
   -o-transition: background 0.4s ease-in-out;
-  transition: background 0.4s ease-in-out;  
+  transition: background 0.4s ease-in-out;
 }
 
 /*Recent Works (Owl Carousel)
@@ -790,14 +790,14 @@
   text-align: center;
   background: #333 url(../img/bg/19.jpg) 50% 0 fixed;
   background-size: cover;
-  background-position: center center;    
+  background-position: center center;
 }
 
 .parallax-twitter:after {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   content: " ";
   position: absolute;
   background: rgba(0,0,0,0.5);
@@ -807,7 +807,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   content: " ";
   position: absolute;
   background: url(../img/patterns/gridtile.png) repeat;
@@ -861,14 +861,14 @@
   position: relative;
   background: #333 url(../img/bg/7.jpg) 50% fixed;
   background-size: cover;
-  background-position: center center;    
+  background-position: center center;
 }
 
 .clients-section:after {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   content: " ";
   position: absolute;
   background: rgba(0,0,0,0.8);
@@ -878,7 +878,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   content: " ";
   position: absolute;
   background: url(../img/patterns/gridtile.png) repeat;
