--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -3746,7 +3746,7 @@ img.image-md {
 .bg-color-red { background-color: #e74c3c !important;}
 .bg-color-aqua { background-color: #27d7e7 !important;}
 .bg-color-blue { background-color: #3498db !important;}
-.bg-color-grey { background-color: #95a5a6 !important;}
+.bg-color-grey { background-color: #eaeaea !important;}
 .bg-color-light { background-color: #f7f7f7 !important;}
 .bg-color-green { background-color: #72c02c !important;}
 .bg-color-brown { background-color: #9c8061 !important;}
