Fix newsletter signup errors dark text on dark
Auditors: @bridiver

--- a/public/assets/css/footers/footer-v7.css
+++ b/public/assets/css/footers/footer-v7.css
@@ -205,3 +205,8 @@
 .sky-form.submited .message p {
   color: #fff;
 }
+
+#mce-responses, .mce_inline_error[for="mce-EMAIL"] {
+  color: #bbb;
+  margin-top: 5px;
+}
