--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -26,3 +26,6 @@
 		min-height: 275px;
 	}
 }
+
+/* mailchimp signup */
+#mc_embed_signup_slider{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
