change footer headline color

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -93,7 +93,7 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
   margin: 0 0 -2px 0;
   padding-bottom: 5px;
   display: inline-block;
-  border-bottom: 2px solid #72c02c;
+  border-bottom: 2px solid #FF5000;
 }
 
 .headline-md {
