--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -26,6 +26,8 @@
 		min-height: 275px;
 	}
 }
+
+/* menu modifications */
 @media (max-width:990px) {
 	#fullsize-menu {
 		clear: left;
@@ -39,7 +41,3 @@
 		right:40px;
 	}
 }
-
-/* mailchimp signup */
-#mc_embed_signup_slider{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-
