--- a/public/assets/css/one.style.css
+++ b/public/assets/css/one.style.css
@@ -569,7 +569,7 @@ a:hover {
 
 @media (max-width: 768px) {
   .one-page-header.top-nav-collapse {
-    padding:50;
+    /*padding: 50px;*/
   }
 }
 
