--- a/public/assets/css/one.style.css
+++ b/public/assets/css/one.style.css
@@ -121,7 +121,7 @@ a:hover {
   }
 }
 @media (max-width: 600px) { 
-  section {
+  body {
     margin-top: 82px;
   }
   .one-page-header {
@@ -283,6 +283,21 @@ a:hover {
     margin-left: 25px;
   }
 }
+/* navbar menu modifications */
+@media (max-width:990px) {
+  #fullsize-menu {
+    clear: left;
+    margin-left:72px;
+  }
+}
+@media (min-width:990px) {
+  .brave-nav {
+    position:absolute; 
+    bottom:0px; 
+    right:40px;
+  }
+}
+
 
 /* Top Log-Reg */
 .log-reg-block {
@@ -626,6 +641,37 @@ a:hover {
 .about-section .about-image {
   padding-top: 100px;
 }
+
+/*Team section
+------------------------------------*/
+/* hack for the Team grid not stacking right */
+@media (max-width: 770px) {
+  #team .col-sm-3 {
+    min-height: 450px;
+  }
+}
+@media (max-width: 550px) {
+  #team .col-sm-3 {
+    min-height: 345px;
+  }
+}
+@media (max-width: 500px) {
+  #team .col-sm-3 {
+    min-height: 320px;
+  }
+}
+@media (max-width: 450px) {
+  #team .col-sm-3 {
+    min-height: 300px;
+  }
+}
+@media (max-width: 400px) {
+  #team .col-sm-3 {
+    min-height: 275px;
+  }
+}
+
+
 
 /*Icon Lists*/
 .content-boxes-v3 i.icon-custom {
