--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -2,6 +2,30 @@
 
 {% block title %}Brave Software | Building a Better Web{% endblock %}
 
+{% block navMenu %}
+                        <li class="home">
+                            <a href="#body">Introducing Brave</a>
+                        </li>
+                        <li>
+                            <a href="#faster">Faster</a>
+                        </li>
+                        <li>
+                            <a href="#safer">Safer</a>
+                        </li>
+
+                         <li>
+                            <a href="#devs">Developers</a>
+                        </li>
+                        <li>
+                            <a href="#team">Team</a>
+
+                        </li>
+                          <li>
+                            <a href="#about">About</a>
+
+                        </li>
+{% endblock %}
+
 {% block mainContent %}
             <!-- mobile slide alternative -->
             <div id="layerslidermobile" style="width: 100%; height: 1260px; margin: 0px auto; background-color:#4F6288">
